[package]
name = "neewer-control"
version = "0.1.0"
edition = "2018"
description = "control neewer lights"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "~0.9", features = ["serde"] }
uuid = "*"
pretty_env_logger = "*"
rand = "*"
tokio = { version = "~1.15", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "*"
log = "*"
futures = "*"
# once_cell = "*"
lazy_static = "*"
bytemuck = { version = "*", features = ["derive"] }
strum_macros = "*"

[package.metadata.bundle]
identifier = "io.github.Antti.neewer-control"
